# reminderscli

./: CMakeLists.txt  LICENSE  README.md  gestor.cpp  gestor.h  install_reminderscli.sh  main.cpp  recordatorio.cpp  recordatorio.h
